Testimonials update from linkedin

--- a/work.html
+++ b/work.html
@@ -206,23 +206,14 @@
                                     <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Fantastic and brilliant service. Highly recommend Milan!</p>
+                                            <p>It was a pleasure working with Milan at B12. We collaborated together to create initial customized websites for clients based on AI generated drafts. His focus on great design while still maintaining a customer-centric approach to align with client expectations made the design team and customer success team partnership thrive.</p>
                                         </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Dr. Hasan Asad</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">The Bearded Toothfairy</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Creativity and professionalism at its best! Milan exceeded expectations in designing our product. The website and app received accolades, positively impacting user engagement. Highly recommended for top-notch design solutions.</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Slesha</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">Founder</p>
+                                        <div class="mt-auto flex items-center space-x-4">
+                                            <img src="assets/images/pp-nedgie.jpg" alt="" class="h-8 rounded-full lg:h-16" />
+                                            <div>
+                                                <p class="heading-font text-2xl">Nedgie Paul</p>
+                                                <p class="text-sm">Customer Success Manager at B12</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </li>
@@ -230,11 +221,14 @@
                                     <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Incredible logo! Milan nailed our brand identity with a design that's both visually stunning and memorable. Highly recommended!</p>
+                                            <p>I had the pleasure of working with Milan on several projects at B12. Milan consistently demonstrated exceptional creativity and problem-solving skills. Their ability to come up with innovative design solutions and work seamlessly with the team was impressive. Milan's contributions were invaluable, and their passion for design truly sets them apart.</p>
                                         </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">My Darling Food</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">Influencer</p>
+                                        <div class="mt-auto flex items-center space-x-4">
+                                            <img src="assets/images/pp-filippo.jpg" alt="" class="h-8 rounded-full lg:h-16" />
+                                            <div>
+                                                <p class="heading-font text-2xl">Filippo Di Trapani</p>
+                                                <p class="text-sm">Senior Product Designer at Automattic</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </li>
@@ -242,11 +236,95 @@
                                     <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Love our new website! Milan nailed the modern, user-friendly design perfectly. Seamless collaboration and improved online presence. Highly recommended!</p>
+                                            <p>Collaborating with Milan on multiple projects has been an absolute pleasure. His incredible design talent and technical know-how have made a huge difference in our projects. Milan goes above and beyond to make sure everything aligns perfectly with our vision, making every step of the process smooth and enjoyable. He's not just a brilliant designer; he's a great team player who genuinely makes our work better.</p>
                                         </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Suman</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">Co-Founder</p>
+                                        <div class="mt-auto flex items-center space-x-4">
+                                            <img src="assets/images/pp-dan.png" alt="" class="h-8 rounded-full lg:h-16" />
+                                            <div>
+                                                <p class="heading-font text-2xl">Daniel Mulé</p>
+                                                <p class="text-sm">Founder, Bodega Cats of New York</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="glide__slide">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>Milan is an exceptional UX designer, easily ranking among the best I've had the privilege to work with at B12. His meticulous attention to detail consistently elevated every project he touched. Milan's communication is impressively responsive and timely, ensuring smooth collaboration throughout the design process. What truly sets him apart is his unwavering commitment to excellence...</p>
+                                            <a href="https://www.linkedin.com/in/milanmdhr" target="_blank" class="text-xs text-primary">read more <i class="las la-angle-right"></i></a>
+                                        </div>
+                                        <div class="mt-auto flex items-center space-x-4">
+                                            <img src="assets/images/pp-chelsea.jpg" alt="" class="h-8 rounded-full lg:h-16" />
+                                            <div>
+                                                <p class="heading-font text-2xl">Chelsea Robinson</p>
+                                                <p class="text-sm">Project Manager at B12</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="glide__slide">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>It was a pleasure working with Milan at B12. We collaborated together to create initial customized websites for clients based on AI generated drafts. His focus on great design while still maintaining a customer-centric approach to align with client expectations made the design team and customer success team partnership thrive.</p>
+                                        </div>
+                                        <div class="mt-auto flex items-center space-x-4">
+                                            <img src="assets/images/pp-nedgie.jpg" alt="" class="h-8 rounded-full lg:h-16" />
+                                            <div>
+                                                <p class="heading-font text-2xl">Nedgie Paul</p>
+                                                <p class="text-sm">Customer Success Manager at B12</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="glide__slide">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>I had the pleasure of working with Milan on several projects at B12. Milan consistently demonstrated exceptional creativity and problem-solving skills. Their ability to come up with innovative design solutions and work seamlessly with the team was impressive. Milan's contributions were invaluable, and their passion for design truly sets them apart.</p>
+                                        </div>
+                                        <div class="mt-auto flex items-center space-x-4">
+                                            <img src="assets/images/pp-filippo.jpg" alt="" class="h-8 rounded-full lg:h-16" />
+                                            <div>
+                                                <p class="heading-font text-2xl">Filippo Di Trapani</p>
+                                                <p class="text-sm">Senior Product Designer at Automattic</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="glide__slide">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>Collaborating with Milan on multiple projects has been an absolute pleasure. His incredible design talent and technical know-how have made a huge difference in our projects. Milan goes above and beyond to make sure everything aligns perfectly with our vision, making every step of the process smooth and enjoyable. He's not just a brilliant designer; he's a great team player who genuinely makes our work better.</p>
+                                        </div>
+                                        <div class="mt-auto flex items-center space-x-4">
+                                            <img src="assets/images/pp-dan.png" alt="" class="h-8 rounded-full lg:h-16" />
+                                            <div>
+                                                <p class="heading-font text-2xl">Daniel Mulé</p>
+                                                <p class="text-sm">Founder, Bodega Cats of New York</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="glide__slide">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>Milan is an exceptional UX designer, easily ranking among the best I've had the privilege to work with at B12. His meticulous attention to detail consistently elevated every project he touched. Milan's communication is impressively responsive and timely, ensuring smooth collaboration throughout the design process. What truly sets him apart is his unwavering commitment to excellence...</p>
+                                            <a href="https://www.linkedin.com/in/milanmdhr" target="_blank" class="text-xs text-primary">read more <i class="las la-angle-right"></i></a>
+                                        </div>
+                                        <div class="mt-auto flex items-center space-x-4">
+                                            <img src="assets/images/pp-chelsea.jpg" alt="" class="h-8 rounded-full lg:h-16" />
+                                            <div>
+                                                <p class="heading-font text-2xl">Chelsea Robinson</p>
+                                                <p class="text-sm">Project Manager at B12</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </li>
