--- a/work-all.html
+++ b/work-all.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Milan Manandhar - Works</title>
+        <title>Milan Manandhar - Additonal Works</title>
         <link rel="shortcut icon" href="assets/images/favicon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -80,9 +80,9 @@
             <div class="home-hero relative h-[60vh] bg-dark bg-[url('../images/hero-background-01.svg')] bg-center bg-no-repeat px-4">
                 <!--Caption-->
                 <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center py-20 text-center text-white">
-                    <h1 class="text-3xl font-bold md:text-5xl xl:text-8xl">15 years of design work</h1>
+                    <h1 class="text-3xl font-bold md:text-5xl xl:text-8xl">Additional works</h1>
 
-                    <p class="mt-4 text-lg font-light lg:text-2xl">A collection of some of my favorite Design projects from the past few years.</p>
+                    <p class="mt-4 text-lg font-light lg:text-2xl">A collection of some of my additional favorite Design projects from the past few years.</p>
                 </div>
             </div>
         </main>
@@ -92,7 +92,7 @@
             <div class="mx-auto max-w-7xl px-4 text-center">
                 <div class="grid grid-cols-1 gap-y-8 text-left lg:mt-16 lg:grid-cols-2 lg:gap-x-12 lg:gap-y-12">
                     <!--Aja Dynasty-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#E5E3D6]">
+                    <!-- <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#E5E3D6]">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
@@ -105,10 +105,10 @@
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
-                    </div>
+                    </div> -->
 
                     <!--Insellerate-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-blue-100">
+                    <!-- <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-blue-100">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p>
@@ -121,10 +121,10 @@
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
-                    </div>
+                    </div> -->
 
                     <!--The Cliff Nepal-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-lime-50">
+                    <!-- <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-lime-50">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
@@ -137,10 +137,10 @@
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
-                    </div>
+                    </div> -->
 
                     <!--Amooma-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-cyan-50">
+                    <!-- <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-cyan-50">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
@@ -153,10 +153,10 @@
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
-                    </div>
+                    </div> -->
 
                     <!--Hydro Steam Northwest-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#DCF0FA]">
+                    <!-- <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#DCF0FA]">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Clickagee</p>
@@ -169,10 +169,10 @@
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
-                    </div>
+                    </div> -->
 
                     <!--Source Taggers-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-300 ease-in-out hover:bg-sky-100">
+                    <!-- <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-300 ease-in-out hover:bg-sky-100">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
@@ -185,7 +185,7 @@
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
-                    </div>
+                    </div> -->
 
                     <!--Find Yourself In Fashion-->
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-orange-50">
